# dune-xerosere

./: .envrc  .gitignore  .mrconfig  README.org  umbrella
.beads/: issues.jsonl
devel/: CMakeLists.txt
docs/: glossary.org
tests/edep-simphony/: README.md  edep-simphony.jsonnet  run.sh
tests/edep-simphony-cli/: README.md  assert.py  cpu.mac  gpu.mac  run.sh
tests/edep-simphony/geometry/: benchmark_small.gdml  build_small_gdml.sh
tests/edep-simphony/geometry/benchmark_ggd/: .gitignore  benchmark.py  build_geo.py  validate.mac
tests/edep-simphony/geometry/benchmark_ggd/lighttrap/: __init__.py  materials.py  surfaces.py
tests/gpu/: README.md  assert_gpu_output.py  plugin_gpu_test.mac  run.sh
tests/phlex-dsl/: deposet-filter.jsonnet  run.sh
